--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\adminBeka\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+user.properties.file=/Users/milastolbetskaya/Library/Application Support/NetBeans/12.5/build.properties
