--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,10 +32,12 @@ dist.jar=${dist.dir}/Crossover_CA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-8.0.26.jar=/Users/milastolbetskaya/Desktop/OOC/8-14 november/mysql-connector-java-8.0.26.jar
+file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\adminBeka\\Desktop\\CCT College\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.26.jar}
+    ${file.reference.mysql-connector-java-8.0.26.jar}:\
+    ${file.reference.mysql-connector-java-8.0.27.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
