--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\adminBeka\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+file.reference.mysql-connector-java-8.0.26.jar=C:\\Users\\adminBeka\\Desktop\\CCT College\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
+user.properties.file=C:\\Users\\adminBeka\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
